Start block explorer

--- a/views/explorer.hbs
+++ b/views/explorer.hbs
@@ -1,222 +1,93 @@
-<!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-	<title>Block Explorer</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>GitHub Profile Analyzer</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/exp.css">
 </head>
+<body>
 
-<body ng-app="BlockExplorer">
-	<div class="container" ng-controller="MainController">
-		<div class="row">
-			<div class="col-md-8 offset-md-2">
-				<h1 id="page-title">Block Explorer</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-6 offset-md-3">
-				<form ng-submit="search(searchValue)">
-					<div class="form-group">
-						<input type="text" class="form-control" ng-model="searchValue">
-					</div>
-					<div class="form-group">
-						<select class="form-control" ng-model="searchType">
-							<option value="block">Block Hash</option>
-							<option value="transaction">Transaction ID</option>
-							<option value="address">Address</option>
-						</select>
-					</div>
-					<button
-						type="submit"
-						class="btn btn-primary margin-auto btn-search">
-							Search
-					</button>
-					<p ng-if="!block && !transaction && !addressData && initialSearchMade" class="no-data-text">
-						No data found for search.
-					</p>
-				</form>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-10 offset-md-1">
+    <div class="header">
+        <div class="container">
+            <div class="row" style="padding-top: 28px; padding-bottom: 50px;">
+                <!-- <div class="col s12 m2 center"> -->
+                    <!-- <a href="/"><img src="img/logo.png" style="margin-bottom: 10px;" class="responsive-img" alt=""></a> -->
+                <!-- </div> -->
 
-				<!-- 'display block' table -->
-				<h3 class="table-title" ng-if="block">Block</h3>
-				<table class="table table-striped" ng-if="block">
-					<tbody>
-						<tr>	
-							<td class="bold">Block Hash</td>
-							<td>{{ block.hash }}</td>
-						</tr>
-						<tr>	
-							<td class="bold">Index</td>
-							<td>{{ block.index }}</td>
-						</tr>
-						<tr>	
-							<td class="bold">Time Stamp</td>
-							<td>{{ block.timestamp }}</td>
-						</tr>
-						<tr>	
-							<td class="bold">Nonce</td>
-							<td>{{ block.nonce }}</td>
-						</tr>
-						<tr>	
-							<td class="bold">Previous Hash</td>
-							<td>{{ block.previousBlockHash }}</td>
-						</tr>
-						<tr>	
-							<td class="bold">Number Transactions</td>
-							<td>{{ block.transactions.length }}</td>
-						</tr>
-					</tbody>
-				</table>
-				<!-- end 'display block' table -->
+                <div class="col s12 m12 ">
+                    <a style="color: white;" href="/"><h2 style="text-align: center;">Block Explorer</h2></a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-				<!-- 'display transaction' table -->
-				<h3 class="table-title" ng-if="transaction">Transaction</h3>
-				<table class="table table-striped" ng-if="transaction">
-					<tbody>
-						<tr>	
-							<td class="bold">Sender</td>
-							<td>{{ transaction.sender }}</td>
-						</tr>
-						<tr>	
-							<td class="bold">Recipient</td>
-							<td>{{ transaction.recipient }}</td>
-						</tr>
-						<tr>	
-							<td class="bold">Amount</td>
-							<td>{{ transaction.amount }}</td>
-						</tr>
-					</tbody>
-				</table>
-				<!-- end 'display transaction' table -->
+    <div class="mainCard" id="mainCard1">
+        <div class="container mainCardContainer">
+            <div class="row">
+                <div class="col s12 m12">
+                    <div class="card">
+                        <div class="card-content innerCard hoverable">
+                           
 
-				<!-- 'display address' table -->
-				<h3 class="table-title" ng-if="addressData">Address</h3>
-				<p id="balance-text" ng-if="addressData">(Balance: {{ addressData.addressBalance }})</p>
-				<table class="table table-striped" ng-if="addressData">
-					<thead>
-						<tr>
-							<th scope="col">Sender</th>
-							<th scope="col">Recipient</th>
-							<th scope="col">Amount</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="transaction in addressData.addressTransactions">
-							<td>{{ transaction.sender }}</td>
-							<td>{{ transaction.recipient }}</td>
-							<td>{{ transaction.amount }}</td>
-						</tr>
-					</tbody>
-				</table>
-				<!-- end 'display address' table -->
+                            <div class="row">
+                                <div class="col s12 m12 center" style="margin-top: 5vh;">
+                                    
+                                    <div class="input-field col s12 m6 offset-m3">
+                                        <form action="">
+                                            <input placeholder="Placeholder" id="username" type="text" class="validate">
+                                            <br>
+                                            <!-- <label class="center" style="text-align: center; margin-left: 20px;" for="first_name">First Name</label> -->
+                                            <br>
+                                            <button class="btn waves-effect waves-dark grey darken-3" style="background-color: #004D40 !important" id="searchBtn">Search!</button>
+                                        </form>
 
-			</div>
-		</div>
-	</div>
+                                    </div>
 
-	<script>
-		window.app = angular.module('BlockExplorer', []);
+                                    <div class="col s12 m12">
+                                        <div id="result-container" class="container center">
+                                            <div id="resultRow" class="row">
+                                                
+                                            </div>
+    
+                                        </div>
+                                    </div>
 
-		app.controller('MainController', function($scope, $http) {
-			$scope.block = null;
-			$scope.transaction = null;
-			$scope.addressData = null;
-			$scope.initialSearchMade = false;
+                                    
 
-			$scope.fetchBlock = function(blockHash) {
-				$http.get(`/block/${blockHash}`)
-				.then(response => {
-					$scope.block = response.data.block;
-					$scope.transaction = null;
-					$scope.addressData = null;
-				});
-			};
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-			$scope.fetchTransaction = function(transactionId) {
-				$http.get(`/transaction/${transactionId}`)
-				.then(response => {
-					$scope.transaction = response.data.transaction;
-					$scope.block = null;
-					$scope.addressData = null;
-				});				
-			};
+                </div>
+            </div>
 
-			$scope.fetchAddressData = function(address) {
-				$http.get(`/address/${address}`)
-				.then(response => {
-					$scope.addressData = response.data.addressData;
-					if (!$scope.addressData.addressTransactions.length) $scope
-						.addressData = null;
-					$scope.block = null;
-					$scope.transaction = null;
-				});				
-			};
+            
+        </div>
+    </div>
 
-			$scope.search = function(searchValue) {
-				$scope.initialSearchMade = true;
-				if ($scope.searchType === 'block') {
-					$scope.fetchBlock(searchValue);
-				}
-				else if ($scope.searchType === 'transaction') {
-					$scope.fetchTransaction(searchValue);
-				}
-				else if ($scope.searchType === 'address') {
-					$scope.fetchAddressData(searchValue);
-				}
-			};
+    <div class="footer">
+        <div class="container">
+            
+        </div>
+    </div>
 
-		});
-	</script>
-
-	<style type="text/css">
-		html, body {
-			min-height: 100vh;
-			background-color: #e8e8e8;
-		}
-		.container {
-			padding-top: 50px;
-			padding-bottom: 50px;
-		}
-		#page-title {
-			text-align: center;
-			margin-bottom: 40px;
-		}
-		.table-title {
-			margin-bottom: 20px;
-			text-align: center;
-		}
-		.table {
-			background-color: #ffffff;
-			box-shadow: 2px 2px 15px -3px rgba(0,0,0,0.75);
-		}
-		#balance-text {
-			text-align: center;
-			margin-top: -20px;
-			margin-bottom: 30px;
-		}
-		.margin-auto {
-			margin: auto;
-			display: block;
-		}
-		.btn-search {
-			margin-bottom: 50px;
-		}
-		.bold {
-			font-weight: 700;
-		}
-		.no-data-text {
-			color: red;
-			text-align: center;
-		}
-	</style>
-
-
+    <!-- Uncompressed jQuery CDN -->
+    <script
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous">
+    </script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- <script src="js/findProfile.js"></script>
+    <script src="js/getFollowers.js"></script>
+    <script src="js/getFollowing.js"></script>
+    <script src="js/getOrgs.js"></script> -->
 </body>
-
 </html>
