--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,22 +8,22 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Profile</title>
+    <title>{{fname}} | Profile</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="/css/resume.min.css" rel="stylesheet">
 
   </head>
 
@@ -31,9 +31,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Naiyya Saggi</span>
+        <span class="d-block d-lg-none">{{fname}} {{lname}}</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{{image}}" alt="User Photo">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,13 +67,13 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Padmaja 
-            <span class="text-primary">Ruparel</span>
+          <h1 class="mb-0">{{fname}} 
+            <span class="text-primary">{{lname}}</span>
           </h1>
-          <div class="subheading mb-5">President, Indian Angel Network<br>
+          <div class="subheading mb-5">{{desc}}<br>
             <!--<a href="mailto:name@email.com"> padmaja@gmail.com</a>-->
           </div>
-          <p class="lead mb-5">Padmaja started the organisation in 2009. The angel network has over 130 investors and has invested in various companies. Padmaja has been a key figure in the Indian entrepreneurial ecosystem from the time she set up TiE Delhi Chapter which was the first TiE chapter in India.</p>
+          <p class="lead mb-5">{{detaildesc}}</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
@@ -93,8 +93,8 @@
     
     
     <div class="row">
-      <div class="col-sm-6"><img src="img/one.png"></div>
-      <div class="col-sm-6"><img src="img/two.png"></div>
+      <div class="col-sm-6"><img src="/img/one.png"></div>
+      <div class="col-sm-6"><img src="/img/two.png"></div>
       <!--<div class="col-sm-4"><img src="img/three.png"></div>-->
     </div>
         </div>
@@ -220,12 +220,12 @@
     
     
               <div class="row">
-                <div class="col-sm-6"><img src="img/one.png"></div>
-                <div class="col-sm-6"><img src="img/two.png"></div>
+                <div class="col-sm-6"><img src="/img/one.png"></div>
+                <div class="col-sm-6"><img src="/img/two.png"></div>
               </div>
               <div class="row">
-                <div class="col-sm-6"><img src="img/one.png"></div>
-                <div class="col-sm-6"><img src="img/two.png"></div>
+                <div class="col-sm-6"><img src="/img/one.png"></div>
+                <div class="col-sm-6"><img src="/img/two.png"></div>
               </div>
         </div>
 
@@ -282,14 +282,14 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="/js/resume.min.js"></script>
 
   </body>
 
