Add some routes and functions for fetching userdata

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -54,7 +54,10 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Insights</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Goals</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Transactions</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/explorer">Block Explorer</a>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -122,7 +125,7 @@
         </div>
       </section>
 
-      <hr class="m-0">
+      <a class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
@@ -130,24 +133,29 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Upasana Taku, Co-founder</h3>
-              <div class="subheading mb-3">MobiKwik</div>
-              <p>Under Upasana's leadership, MobiKwik is playing a pivotal role in India’s digital future. Her current responsibility is to lead MobiKwik's evolution into a financial distribution hub that caters to the financial needs and aspirations of a billion Indians and provides them access to all financial services such as pay, borrow, save, and invest on the MobiKwik platform.</p>
+              <h3 class="mb-0">GARIMA SATIJA, Founder, PoshVine</h3>
+              <div class="subheading mb-3">PoshVine</div>
+              <p>Garima Satija is a young entrepreneur and founder of PoshVine, a community marketplace for travellers and adventure seekers to offer, discover and book unique experiences. </p>
+  <br>
+    <a target="_blank" href="/videoCall"> <button class="meeting">Schedule a meeting</button> </a>
+
             </div>
-            <div class="resume-date text-md-right">
+            {{!-- <div class="resume-date text-md-right">
               <span class="text-primary">March 2013 - Present</span>
-            </div>
+            </div> --}}
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Radhika Aggarwal, Co-founder</h3>
-              <div class="subheading mb-3">ShopClues</div>
+              <h3 class="mb-0">GURLEEN KAUR, CEO, Hareepatti</h3>
+              <div class="subheading mb-3">Hareepatti</div>
               <p>ShopClues has kept itself apart by focusing on the burgeoning tier-II and tier-III cities in the country. Focusing on the fashion and lifestyle categories ShopClues has been venturing into local, unbranded markets</p>
+              <br>
+              <a target="_blank" href="/videoCall"> <button class="meeting">Schedule a meeting</button> </a>
             </div>
-            <div class="resume-date text-md-right">
+            {{!-- <div class="resume-date text-md-right">
               <span class="text-primary">December 2011 - March 2013</span>
-            </div>
+            </div> --}}
           </div>
 
           <!--<div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -187,10 +195,12 @@
               <h3 class="mb-0">Upasana Taku, Co-founder</h3>
               <div class="subheading mb-3">MobiKwik</div>
               <p>Under Upasana's leadership, MobiKwik is playing a pivotal role in India’s digital future. Her current responsibility is to lead MobiKwik's evolution into a financial distribution hub that caters to the financial needs and aspirations of a billion Indians and provides them access to all financial services such as pay, borrow, save, and invest on the MobiKwik platform.</p>
+              <br>
+              <a target="_blank" href="/videoCall"> <button class="meeting">Schedule a meeting</button> </a>
             </div>
-            <div class="resume-date text-md-right">
+            {{!-- <div class="resume-date text-md-right">
               <span class="text-primary">March 2013 - Present</span>
-            </div>
+            </div> --}}
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -198,10 +208,12 @@
               <h3 class="mb-0">Radhika Aggarwal, Co-founder</h3>
               <div class="subheading mb-3">ShopClues</div>
               <p>ShopClues has kept itself apart by focusing on the burgeoning tier-II and tier-III cities in the country. Focusing on the fashion and lifestyle categories ShopClues has been venturing into local, unbranded markets</p>
+              <br>
+              <a target="_blank" href="/videoCall"> <button class="meeting">Schedule a meeting</button> </a>
             </div>
-            <div class="resume-date text-md-right">
+            {{!-- <div class="resume-date text-md-right">
               <span class="text-primary">December 2011 - March 2013</span>
-            </div>
+            </div> --}}
           </div>
         <!--<div class="my-auto">
           <h2 class="mb-5">People Who Might Be Interested In You</h2>
@@ -259,7 +271,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests" style="margin-top: 0px">
         <div class="my-auto">
-          <h2 class="mb-5" >Goals</h2>
+          <h2 class="mb-5" >See Transactions</h2>
           <p>To help the 30 million parents online make decisions on doctors, hospitals, cord blood banks, playschools, activities, events, and products. Strong social integration, an evolving tech platform and a focus on reviews help parents make decisions easier.</p>
           
         </div>
