--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Space template</title>
+    <title>Women-4-Women</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     
     <!-- CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="/css/owl.carousel.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/ionicons.min.css">
+    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     
     <!-- Js -->
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -41,7 +41,7 @@
 
 
     <!-- Header Start -->
-  <header style="padding: 4px !important;">
+  <header style="padding-top: 0; padding-bottom: 5px;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -57,17 +57,19 @@
                 <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                  <img src="img/logo.png" alt="Logo">
+                  <img style="height: 80px; margin-top: 10px; margin-bottom: -20px !important;" src="img/logo.png" alt="Logo">
                 </a>
               </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                  <ul style="margin-top: -35px;" class="nav navbar-nav navbar-right">
+                    <li><a href="index.html#slider">Home</a></li>
+                    <li><a href="index.html#intro">About Us</a></li>
+                    <li><a href="index.html#feature">Objectives</a></li>
+                    <li><a href="index.html#service">Success Stories</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                      <li><a target="_blank" href="/login">Log In</a></li>
+                      <li><a target="_blank" href="/signup">Sign Up</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
@@ -83,8 +85,13 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-2">
             <div class="block">
-              <h1 class="animated fadeInUp">A DIGITAL MARKETING &#38; <br> DESIGN AGENCY</h1>
-              <p class="animated fadeInUp">We love the Web and the work we do.We work closely with our </br> clients to deliver the best possible solutions for their needs</p>
+              <h1 style="text-align: center; margin-left: -22%; " class="animated fadeInUp"><b>A DIGITAL INNOVATION </b></h1>
+              {{!-- <img style="height: 200px; float: left" src="img/logo.png" alt="Logo"> --}}
+              <p style="text-align: center; margin-left: -22%;" class="animated fadeInUp">Women for Women is an application which serves<br>the purpose of connecting Women Entreprenaurs of the World. </p>
+              <br>
+              <div style="margin-left: 30%;">
+                <a href="/signup" style="font-size: 18px; padding-top: 10px;" class="myButton">SIGNUP</a>
+              </div>
             </div>
           </div>
         </div>
@@ -98,9 +105,11 @@
             <div class="block">
               <div class="section-title">
                 <h2>About Us</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+                <p>Women for Women is a platform where Women Entrepreneurs can come together and help each other and themselves. </p>
               </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+              <p>Through our Platform we want to help those women who might not get the opportunity to showcase their potential ideas. We provide opportunity for Women Entrepreneurs to connect with someone who shares the common feeling and develop a Small MicroFinance Group.</p>
+            <p>We provide a chance to each and every individual to be a part of increasing Global Economy. Each and Every person can become a Investor and it doesnt costs a load.</p>
+            
             </div>
           </div><!-- .col-md-7 close -->
           <div class="col-md-5 col-sm-12">
@@ -116,11 +125,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-6">
-          <h2>WE BELIEVE IN GREAT IDEAS</h2>
-          <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <a href="work.html" class="btn btn-view-works">View Works</a>
+          <h2>WE HELP GROW GREAT DREAMS INTO REALITY</h2>
+          <p>World is Full of ideas. Look around you and you'll find thousands of ideas floating around you. But it costs a lot to turn those ideas into Reality. And in an environment where women are not trusted upon for investments, it becomes even more difficult for their ides to grow.</p>
+          <p>Our Objective is to provide Women Entrepreneurs funding and help in small amounts through a large pool of Investors, at a very low interest rates. We don't beleive that to be an Investor, you have to fund in huge Chunks. Here at Women for Women, we support investments in small amounts at easily repayable low interests rates</p> 
+          <p>A pool of Little drops make an ocean. We look out for Women Entrepreneurs with Potential to grow, and reach out to already established women entrepreneurs who know the pain to pool in small chunks, making them the Investors, and helps the Idea Grow.</p>
         </div>
       </div>
     </div>
@@ -132,7 +140,7 @@
         <div class="row">
           <div class="section-title">
             <h2>Our Services</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+            <p>We Provide a variety of services to our Customers to help their Startup grow.</p>
           </div>
         </div>
         <div class="row ">
@@ -140,70 +148,56 @@
             <div class="service-item">
               <i class="icon ion-coffee"></i>
               <h4>Branding</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+              <p>We help your startup grow by providing resources and buisness strategies for smooth development.</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
               <i class="ion-compass"></i>
               <h4>Web Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+              <p>We Help creating Websites for startups and attract crowd.</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
               <i class="ion-image"></i>
               <h4>App Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+              <p>We Help creating Mobile Applications for startups and deploying on Google Play. </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
               <i class="ion-bug"></i>
-              <h4>Start Up</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+              <h4>Secure Transactions</h4>
+              <p>Investment transactions made are completely secure. We use distributed ledger to keep transactions safe and frauds aside. </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
               <i class="ion-headphone"></i>
               <h4>Logo Design</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+              <p>We Help creating Logos for startups as their Startup Symbol. </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
               <i class="ion-leaf"></i>
-              <h4>Development</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+              <h4>Investment</h4>
+              <p>We enable a common women to become a Investor and Part owner of a start-up at small fund inputs. </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
               <i class="ion-planet"></i>
               <h4>Brand Identity</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+              <p>We help in Publicity and Marketing of the Startups through Crowdfunding and bringing the Investors to you. </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="service-item">
               <i class="ion-earth"></i>
-              <h4>Brand Identity</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Call to action Start -->
-    <section id="call-to-action">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="block">
-              <h2>We design delightful digital experiences.</h2>
-              <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-              <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+              <h4>Globalization</h4>
+              <p>We help your idea reach out to interested people across the world. We use ML algorithms to get you the best choices of Startups and Investors.</p>
             </div>
           </div>
         </div>
@@ -214,119 +208,62 @@
       <div class="container">
         <div class="row">
           <div class="section-title text-center">
-            <h2>Fun Facts About Us</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+            <h2>Some Great Stories</h2>
+            <p></p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="block">
-              <ul class="counter-box clearfix">
-                <li>
-                  <div class="block">
-                    <i class="ion-ios-chatboxes-outline"></i>
-                    <h4 class="counter">20000</h4>
-                    <span>Cups Of Coffee</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="block">
-                    <i class="ion-ios-glasses-outline"></i>
-                    <h4 class="counter">20000</h4>
-                    <span>Cups Of Coffee</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="block">
-                    <i class="ion-ios-compose-outline"></i>
-                    <h4 class="counter">20000</h4>
-                    <span>Cups Of Coffee</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="block">
-                    <i class="ion-ios-timer-outline"></i>
-                    <h4 class="counter">20000</h4>
-                    <span>Cups Of Coffee</span>
-                  </div>
-                </li>
-
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-6">
+          <div  style="margin-left: 25%;" align="Center" class="col-md-6">
             <div class="testimonial-carousel">
               <div id="testimonial-slider" class="owl-carousel">
                 <div>
                     <img src="img/cotation.png" alt="IMG">
-                    <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
+                    <p>"Never sell yourself to a notion. Never Sell yourself to a relationship. You have to be true to yourself."</p>
                     <div class="user">
-                      <img src="img/item-img1.jpg" alt="Pepole">
-                      <p><span>Rose Ray</span> CEO</p>
+                      <img src="img/Abhijita-Kulshrestha.png" alt="Pepole">
+                      <p><span>Abhijita Kulshreshtha</span> Founder of GemStoneUniverse</p>
                     </div>
                 </div>
                 <div>
                   <img src="img/cotation.png" alt="IMG">
-                    <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
+                    <p>"Every story, each poem that a person shares, each voice that speaks against menstrual taboo, inspires me."</p>
                     <div class="user">
-                      <img src="img/item-img1.jpg" alt="Pepole">
-                      <p><span>Rose Ray</span> CEO</p>
+                      <img src="img/AditiGupta.jpg" alt="Pepole">
+                      <p><span>Aditi Gupta</span> Founder of Menstrupedia</p>
                     </div>
                 </div>
                 <div>
                   <img src="img/cotation.png" alt="IMG">
-                    <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
+                    <p>"Don't ever let somebody tell you you can't do something."</p>
                     <div class="user">
-                      <img src="img/item-img1.jpg" alt="Pepole">
-                      <p><span>Rose Ray</span> CEO</p>
+                      <img src="img/Vedika-Goel.jpg" alt="Pepole">
+                      <p><span>Vedika Goel</span> Founder of With You</p>
                     </div>
                 </div>
                 <div>
                   <img src="img/cotation.png" alt="IMG">
-                    <p>"This Company created an e-commerce site with the tools to make our business a success, with innovative ideas we feel that our site has unique elements that make us stand out from the crowd."</p>
+                    <p>"Your talent and the right opportunities open the first few doors but your attitude opens the rest."</p>
                     <div class="user">
-                      <img src="img/item-img1.jpg" alt="Pepole">
-                      <p><span>Rose Ray</span> CEO</p>
+                      <img src="img/sneh_sharma.jpg" alt="Pepole">
+                      <p><span>Sneh Sharma</span> Founder and CEO of Ittisa</p>
                     </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-
-
-
-
-
-
-
-    
+    </section>    
     <!-- footer Start -->
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="footer-manu">
-              <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Terms</a></li>
-              </ul>
-            </div>
-            <p>Copyright &copy; Crafted by <a href="https://dcrazed.com/">Dcrazed</a>.</p>
+            <p>Copyright &copy; Crafted by <a href="https://dcrazed.com/">WeLead</a>.</p>
           </div>
         </div>
       </div>
     </footer>
             
-            
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-            
     
     </body>
 </html>
