--- a/views/contact1.hbs
+++ b/views/contact1.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Women for Women - Contact Us</title>
+    <title>Space Template</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -61,10 +61,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#intro">About Us</a></li>
-                    <li><a href="index.html#feature">Objectives</a></li>
-                    <li><a href="index.html#service">Success Stories</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                   </li>
                 </ul>
                 </div><!-- /.navbar-collapse -->
@@ -81,8 +81,8 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="block">
-                  <h1>Tell Us Something About You.</h1>
-                  <p>Share your motivating stories on how Microfinances helped change your life.</p>
+                  <h1>Drop Us A Note</h1>
+                  <p>Don’t just take our word for it. Check out some of our latest work.</p>
                 </div>
               </div>
             </div>
@@ -124,13 +124,13 @@
                   <h2>Stop By For A visit</h2>
                   <ul class="address-block">
                     <li>
-                      <i class="fa fa-map-marker"></i>Katpadi, Main Road, Vellore, Tamil Nadu
+                      <i class="fa fa-map-marker"></i>North Main Street,Brooklyn Australia
                     </li>
                     <li>
-                      <i class="fa fa-envelope-o"></i>Email: welead@mail.com
+                      <i class="fa fa-envelope-o"></i>Email: contact@mail.com
                     </li>
                     <li>
-                      <i class="fa fa-phone"></i>Phone:+91 9456340987
+                      <i class="fa fa-phone"></i>Phone:+88 01672 506 744
                     </li>
                   </ul>
 
@@ -161,7 +161,7 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="block">
-                  <h2>Find Us on Google Map</h2>
+                  <h2>We Also Count In Google Map</h2>
                     <div class="google-map">
                       <div id="map"></div>
                     </div>
@@ -176,8 +176,8 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="block">
-                  <h2>We are delightful for New Success Stories.</h2>
-                  <p>We always love hearing from our customers, how a pool of small Donations led their Startups to a big name. There are a thousand more like you out there. Tell us your Motivating Stories.</p>
+                  <h2>We design delightful digital experiences.</h2>
+                  <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
                   <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
                 </div>
               </div>
@@ -198,7 +198,7 @@
                     <li><a href="#">Terms</a></li>
                   </ul>
                 </div>
-                <p>Copyright &copy; Crafted by <a href="https://dcrazed.com/">WeLead</a>.</p>
+                <p>Copyright &copy; Crafted by <a href="https://dcrazed.com/">Dcrazed</a>.</p>
               </div>
             </div>
           </div>
